2009-03-01  Steffen Macke <sdteffen@sdteffen.de>

	* makefile.msc: Fixed typo (dia.exe was copied to dia-app.dll when doing
	"make full")
	* installer/win32/dia.nsi: Don't install Desktop shortcut. Patch from Niels
	Martin Hansen
	
2009-02-26  Steffen Macke <sdteffen@sdteffen.de>

	* po/POTFILES.in:
	* configure.in:
	* installer/win32/Makefile.am:
	* installer/win32/gennsh.c:
	* Makefile.am: Add gennsh.c, a dummy C program to create NSIS
	installer locale files. Bugzilla bug #572202

2009-02-25  Steffen Macke <sdteffen@sdteffen.de>

	* app/sheets_dialog_callbacks.c:
	* lib/libdia.def:
	* lib/sheet.c:
	* lib/dia_dirs.[ch]: Save relative path for icons in user created
	sheets; allow icon loader to fall back to system directoy if icon
	is not found in config directory; fixes bug #573027

2009-02-24  Steffen Macke <sdteffen@sdteffen.de>

	* app/sheets_dialog_callbacks.c: Write <icon> to <object> instead of
	<description>, fixes part of bug #573027

2009-02-20  Steffen Macke <sdteffen@sdteffen.de>

	* doc/en/dia.xml: Bumped revisions and dates to indicate progress
	for 0.97 release.

2009-02-19  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Include missing SISSI icons

2009-02-16  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Various small updates
	* installer/win32/locale/*.nsh: Use Python 2.3 instead of 2.2 
	* makefile.msc: Consequent use of build/win32

2009-02-15  Hans Breuer  <hans@breuer.org>

	* configure.in config.h.win32 NEWS : dia-0.97-pre2

	* plug-ins/python/Makefile.am : every script to be installed for
	--with-python must be available with EXTRA_DIST, bug #571862
	(pyplugin_SCRIPTS_TO_INSTALL) : one variable to be used for both
	cases, removed group_props.py there, the built-in dialog works better

	* configure.in config.h.win32 : release of dia-0.97-pre1, finally;)
	* INSTALL NEWS : updated

	* tests/test-objects.c : g_assert(o->ops->get_object_menu == NULL || 